--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,8 @@ migration-rocksdb = { path = "util/migration-rocksdb" }
 kvdb = "0.1"
 kvdb-rocksdb = "0.1.3"
 journaldb = { path = "util/journaldb" }
+trie-db = "0.11.0"
+trie-stats = { path = "util/trie-stats" }
 
 ethcore-secretstore = { path = "secret-store", optional = true }
 
